<resources>
    <string name="app_name">U-Hoo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">History</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_account">Account</string>
    <string name="title_help">Help</string>
    <string name="message_alert">If you require urgent medical attention, please contact emergency services or proceed to the nearest A&amp;E facility.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="myChild">
        <item>Child 1</item>
        <item>Child2</item>
        <item>Click to add Child</item>
    </string-array>
</resources>
