<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_home_white_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@mipmap/ic_history_white_24dp"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/title_wallet" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@mipmap/ic_account_circle_white_24dp"
        android:title="@string/title_account"/>
    <item
        android:id="@+id/navigation_help"
        android:icon="@mipmap/ic_help_white_24dp"
        android:title="@string/title_help" />
</menu>
